--- a/index.html
+++ b/index.html
@@ -1,2 +1,42 @@
-<h1>Test Test zweijahre</h1>
-<p>Adding changes</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+      integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <title>Zwei Jahre</title>
+  </head>
+  <body>
+    <h1>This is a test</h1>
+
+    <section class="login is-hidden" data-login>
+      <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+          <div class="cell small-12">
+            <input
+              class="error"
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Super geheimes Passwort"
+              data-pw
+            />
+            <button class="button float-right" data-login-button>
+              Leggo
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="data.js"></script>
+    <script src="login.js"></script>
+    <script src="scheduler.js"></script>
+  </body>
+</html>
