--- a/index.html
+++ b/index.html
@@ -13,35 +13,43 @@
     <title>Zwei Jahre</title>
   </head>
   <body>
-    <section class="login is-hidden" data-login>
-      <div class="grid-container">
+    <section class="login is-inactive" data-login>
+      <div style="flex-grow: 1;" class="grid-container">
         <div class="grid-x grid-margin-x">
           <div class="cell small-12">
-            <div class="grid-x">
-              <div class="cell small-9">
-                <input
-                  class="error"
-                  type="password"
-                  id="password"
-                  name="password"
-                  placeholder="Super geheimes Passwort"
-                  data-pw
-                />
-              </div>
-              <div class="cell small-3">
-                <button class="button" data-login-button>
-                  Leggo
-                </button>
-              </div>
+            <h3 style="font-family: 'Libre Baskerville'; text-align: center;">
+              Jahrestag R&S x3
+            </h3>
+            <div class="form__text-input" data-input-wrap>
+              <input
+                class="error"
+                type="password"
+                id="password"
+                name="password"
+                required="required"
+                data-pw
+              />
+              <label for="password">Super geheimes Passwort</label>
+            </div>
+            <div class="text-center">
+              <button class="button" data-login-button>
+                Leggo
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
-      <img src="assets/images/placeholder.png" alt="#" data-image />
-      <p data-text></p>
+    <section class="page">
+      <div class="grid-container" data-container>
+        <div class="box" data-box>
+          <div class="box__image-wrap">
+            <img src="assets/images/placeholder.png" alt="#" data-image />
+          </div>
+          <p class="box__text" data-text></p>
+        </div>
+      </div>
     </section>
 
     <!-- JS FOOTER -->
