--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="main.css" />
+    <link rel="manifest" href="dunplab-manifest-9819.json" />
     <title>Zwei Jahre</title>
   </head>
   <body>
