--- a/index.html
+++ b/index.html
@@ -12,24 +12,34 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="manifest" href="dunplab-manifest-9819.json" />
     <title>Zwei Jahre</title>
+
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicons/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/favicons/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/favicons/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/favicons/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/favicons/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/images/favicons/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/images/favicons/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/images/favicons/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicons/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/favicons/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/images/favicons/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicons/favicon-16x16.png" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="./assets/images/favicons/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <section class="login is-inactive" data-login>
       <div style="flex-grow: 1;" class="grid-container">
         <div class="grid-x grid-margin-x">
           <div class="cell small-12">
-            <h3 style="font-family: 'Libre Baskerville'; text-align: center;">
+            <h3 class="text-center">
               Jahrestag R&S x3
             </h3>
             <div class="form__text-input" data-input-wrap>
-              <input
-                class="error"
-                type="password"
-                id="password"
-                name="password"
-                required="required"
-                data-pw
-              />
+              <input class="error" type="password" id="password" name="password" required="required" data-pw />
               <label for="password">Super geheimes Passwort</label>
             </div>
             <div class="text-center">
@@ -50,6 +60,7 @@
           </div>
           <p class="box__text" data-text></p>
         </div>
+        <span class="page__next-date" data-next-date>rdyfys</span>
       </div>
     </section>
 
