adding open graph meta info

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <link rel="manifest" href="dunplab-manifest-9819.json" />
     <title>Zwei Jahre</title>
 
+    <meta property="og:title" content="Zwei Jahre | Jahrestag 2020" />
+    <meta property="og:url" content="https://sumwunspeshal.github.io/zweijahre" />
+    <meta
+      property="og:image"
+      content="https://sumwunspeshal.github.io/zweijahre/assets/images/og-preview/og-preview.png"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Jahrestagsgeschenk von Sacha an Regina. Finde ein Jahr lang jede Woche kleine Nachrichten von mir an Dich. Liebe!"
+    />
+    <meta property="og:locale" content="de_DE" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicons/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/favicons/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/favicons/apple-icon-72x72.png" />
