tweaking meta data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="main.css" />
     <link rel="manifest" href="dunplab-manifest-9819.json" />
-    <title>Zwei Jahre</title>
+    <title>Zwei Jahre | Jahrestag 2020</title>
 
     <meta property="og:title" content="Zwei Jahre | Jahrestag 2020" />
     <meta property="og:url" content="https://sumwunspeshal.github.io/zweijahre" />
