--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div style="flex-grow: 1;" class="grid-container">
         <div class="grid-x grid-margin-x">
           <div class="cell small-12">
-            <h3 class="text-center">
-              Jahrestag R&S x3
-            </h3>
+            <h1 class="text-center">
+              Jahrestag 2020
+            </h1>
             <div class="form__text-input" data-input-wrap>
               <input class="error" type="password" id="password" name="password" required="required" data-pw />
               <label for="password">Super geheimes Passwort</label>
