--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Jahrestag 2020
             </h1>
             <div class="form__text-input" data-input-wrap>
-              <input class="error" type="password" id="password" name="password" required="required" data-pw />
+              <input type="password" id="password" name="password" required="required" data-pw />
               <label for="password">Super geheimes Passwort</label>
             </div>
             <div class="text-center">
