--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <section class="login is-inactive" data-login>
-      <div style="flex-grow: 1;" class="grid-container">
+      <div class="grid-container flex-child-grow">
         <div class="grid-x grid-margin-x">
           <div class="cell small-12">
             <h1 class="text-center">
