playing around with login-mask

--- a/index.html
+++ b/index.html
@@ -48,17 +48,19 @@
       <div class="grid-container flex-child-grow">
         <div class="grid-x grid-margin-x">
           <div class="cell small-12">
-            <h1 class="text-center">
-              Jahrestag 2020
-            </h1>
-            <div class="form__text-input" data-input-wrap>
-              <input type="password" id="password" name="password" required="required" data-pw />
-              <label for="password">Super geheimes Passwort</label>
-            </div>
-            <div class="text-center">
-              <button class="button" data-login-button>
-                Leggo
-              </button>
+            <div class="login__box">
+              <h1 class="text-center">
+                Jahrestag 2020
+              </h1>
+              <div class="form__text-input" data-input-wrap>
+                <input type="password" id="password" name="password" required="required" data-pw />
+                <label for="password">Super geheimes Passwort</label>
+              </div>
+              <div class="text-center">
+                <button class="button" data-login-button>
+                  Leggo
+                </button>
+              </div>
             </div>
           </div>
         </div>
