adding history page

--- a/history.html
+++ b/history.html
@@ -44,41 +44,16 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <section class="login is-inactive" data-login>
-      <div class="grid-container flex-child-grow">
-        <div class="grid-x grid-margin-x">
-          <div class="cell small-12">
-            <div class="login__box">
-              <h1 class="text-center">
-                Jahrestag 2020
-              </h1>
-              <div class="form__text-input" data-input-wrap>
-                <input type="password" id="password" name="password" required="required" data-pw />
-                <label for="password">Super geheimes Passwort</label>
-              </div>
-              <div class="text-center">
-                <button class="button" data-login-button>
-                  Leggo
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="page">
-      <div class="grid-container">
-        <div class="box" data-box>
+      <div class="grid-container" data-container>
+        <div class="text-center margin-bottom-1">
+          <a class="button" href="./index.html">Zurück</a>
+        </div>
+        <div class="box margin-bottom-2 is-hidden" data-history-item>
           <div class="box__image-wrap">
             <img src="assets/images/placeholder.png" alt="#" data-image />
           </div>
           <p class="box__text" data-text></p>
-        </div>
-        <span class="page__next-date margin-bottom-2" data-next-date>rdyfys</span>
-
-        <div class="text-center">
-          <a class="button" href="./history.html">Verlauf</a>
         </div>
       </div>
     </section>
